GPIO init function and loop reading sensors modified
-Added function to set the PB5 GPIO Pin as Input or Output based on the parameter of the function .

-Modified the reading sensor cycle: now 3 analog sensors are read, not only 2.

--- a/LoRaWAN_End_Node/STM32CubeIDE/Debug/makefile
+++ b/LoRaWAN_End_Node/STM32CubeIDE/Debug/makefile
@@ -20,6 +20,7 @@ RM := rm -rf
 -include Application/User/LoRaWAN/Target/subdir.mk
 -include Application/User/LoRaWAN/App/subdir.mk
 -include Application/User/Core/sensors/subdir.mk
+-include Application/User/Core/lib/subdir.mk
 -include Application/User/Core/subdir.mk
 -include objects.mk
 
